# clangd_bug_repro

./: CMakeLists.txt  README.md
BadApp/: CMakeLists.txt  main.m
BadModule/: BadModule.h  BadModuleImpl.h  CMakeLists.txt  module.modulemap
